configure git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
+.idea/workspace.xml
+.idea/libraries
+.idea/
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+*.apk
+*.jks
+*.jar
+gradlew
+gradlew.bat
+output.json
