--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
-        android:name=".api.TurismoAplicacion"
+        android:name=".bdFirebase.TurismoAplicacion"
         android:allowBackup="true"
         android:icon="@drawable/marcador_lugar"
         android:label="@string/app_name"
