--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 *.iml
 .gradle
 /local.properties
-.idea/workspace.xml
-.idea/libraries
 .idea/
 .DS_Store
 /build
@@ -14,3 +12,4 @@
 gradlew
 gradlew.bat
 output.json
+app/libs/
