+lista de sugerencias por el revisor2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -245,6 +245,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.hga.appturismo.activity.MainActivity"/>
         </activity>
+        <activity android:name=".activity.DescripcionSugerenciaActivity">
+        </activity>
     </application>
 
 </manifest>
