sugerencias hrl, insertado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -245,7 +245,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.hga.appturismo.activity.MainActivity"/>
         </activity>
-        <activity android:name=".activity.DescripcionSugerenciaActivity">
+        <activity
+            android:name=".activity.DescripcionSugerenciaActivity"
+            android:label="Revisar sugerencias"
+            android:parentActivityName=".activity.ListaSugerirLugarActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.hga.appturismo.activity.ListaSugerirLugarActivity"/>
         </activity>
     </application>
 
